# langid_transcripts

./: .gitignore  @1Jarah_ar.tsv  Dockerfile  app.py  dialects_stat.py  download.py  pyproject.toml  start_service.sh  test.ipynb
