[tool.poetry]
name = "langid-transcripts-api"
version = "0.2.0"
description = "A simple API for language identification of transcripts."
authors = ["kirill <kirill@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fasttext = "^0.9.3"
numpy = "<2.0.0"
huggingface-hub = "^0.24.5"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = "^0.30.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
